--- a/package.json
+++ b/package.json
@@ -1,21 +1,46 @@
 {
-  "name": "jbook",
+  "name": "codedoc",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "@monaco-editor/react": "3.7.5",
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "@types/history": "^4.7.8",
     "@types/jest": "^26.0.19",
+    "@types/jscodeshift": "0.7.2",
     "@types/node": "^12.19.11",
+    "@types/prettier": "^2.2.3",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
+    "@types/react-redux": "7.1.15",
+    "@types/react-resizable": "1.7.2",
+    "@types/react-router": "^5.1.13",
+    "@types/react-router-dom": "^5.1.7",
+    "@uiw/react-md-editor": "2.1.1",
+    "aws-sdk": "^2.874.0",
     "axios": "^0.21.1",
+    "bulmaswatch": "^0.8.1",
     "esbuild-wasm": "0.8.27",
+    "history": "^5.0.0",
+    "immer": "^9.0.1",
+    "jscodeshift": "0.11.0",
     "localforage": "^1.9.0",
+    "monaco-editor": "0.23.0",
+    "monaco-jsx-highlighter": "0.0.15",
+    "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "7.2.2",
+    "react-resizable": "1.11.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "redux": "4.0.5",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "2.3.0",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
