--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "set PORT=3006 && react-scripts start ",
+    "start": "react-scripts start ",
     "build": "CI=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
